Fixed contacts CSS to show ellipses on overflowing links instead of wrapping

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -313,7 +313,6 @@ span.slideshow-pause-active { background-color: #666; }
   margin-top: 3rem; padding: 1rem 5% 2rem 5%;
   border-top: 2px solid #eee;
   background-image: linear-gradient(-15deg, #ddd, #fff);
-  overflow-wrap: break-word;
   color: #333;
 }
 
@@ -337,6 +336,7 @@ span.slideshow-pause-active { background-color: #666; }
 .contact-container > dl > dd {
   margin: 0 5% 0 3rem;
   font-weight: 300; font-size: 0.75rem;
+  overflow: hidden; text-overflow: ellipsis;
   color: rgba(0,0,0,0.5);
 }
 
